TestSuite/errors/err0413.pas
type
  t1<T> = abstract class(System.Collections.Generic.IEnumerator<T>) 
    public property IEnumerator<integer>.Current: integer read 2;
    
  end;
  
begin end.